@@ -232,6 +232,7 @@ datadir/Common_Content/common-db5/pot/Feedback.pot
 datadir/Common_Content/common-db5/pot/Program_Listing.pot
 datadir/Common_Content/common-db5/pot/Revision_History.pot
 datadir/Common_Content/common-db5/publican.cfg
+datadir/Common_Content/common-db5/zanata.xml
 datadir/Common_Content/common/ar-SA/Conventions.po
 datadir/Common_Content/common/ar-SA/css/lang.css
 datadir/Common_Content/common/ar-SA/css/menu.css
@@ -902,4 +903,3 @@ windows/publican2.ico
 xt/author/perlcritic.t
 xt/author/pod-coverage.t
 xt/author/pod.t
-META.json
