@@ -47,6 +47,7 @@
   - Fix Link from footlink to footlink-ref not working in PDF. BZ #909786
   - Fix TOC draft watermark in PDF. BZ #905271
   - Add common-db5 sub package. BZ #958495
+  - Support decimals in colwidth & convert exact measures to pixels. BZ #913775
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
